--- a/.github/workflows/build-maven.yml
+++ b/.github/workflows/build-maven.yml
@@ -5,9 +5,9 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ master ]
+    branches: [ masterx ]
   pull_request:
-    branches: [ master ]
+    branches: [ masterx ]
 
 jobs:
   build:
