--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -9,7 +9,7 @@
 		<version>2.3.2.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>io.github.olgamaciaszek</groupId>
+	<groupId>io.github.pilgrim2go</groupId>
 	<artifactId>config-server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>config-server</name>
