--- a/card-service/pom.xml
+++ b/card-service/pom.xml
@@ -14,6 +14,13 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>card-service</name>
 	<description>Demo project for Spring Boot</description>
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/pilgrim2go/spring-cloud-intro-demo</url>
+        </repository>
+    </distributionManagement> 
 
 	<properties>
 		<java.version>1.8</java.version>
